--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link href="Assets/Stylesheets/main.css" rel="stylesheet">
     </head>
     <body>
+        <div class="loader-wrapper">
+            <div class="loader">
+            </div>
+        </div>
 
     </body>
 </html>
