--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <link href="Assets/Stylesheets/main.css" rel="stylesheet">
     </head>
     <body>
-        <div class="loader-wrapper">
-            <div class="loader">
-            </div>
-        </div>
+       <div id="flip">
+           <div id="flip-left-side"></div>
+           <div id="flip-right-side"></div>
 
+        </div>
     </body>
 </html>
