Fixed animation issues

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
            <div id="flip-right-side"></div>
 
         </div>
+        <div class="content">
+            <p>dkgasjfs</p>
+        </div>
     </body>
 </html>
