--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
            <div id="flip-right-side"></div>
 
         </div>
-        <div class="content">
-            <p>dkgasjfs</p>
+        <div id="content">
+            <div class="row" id="home">
+
+            </div>
+            <div class="row" id="about">
+
+            </div>
+            <div class="row" id="folio">
+
+            </div>
         </div>
     </body>
 </html>
