Overlay bg and add scripts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
         <div id="content">
             <div class="row" id="home">
-                <a href="#about"><img</a>
+                <div class="column small-12 text-center" id="home-txt">
+                    <h1>Christopher Kiilu Ndeti</h1>
+                    <p>Take the journey with me</p>
+                    <p></p>
+                </div>
+                <div class="column small-2 small-centered"><a href="#about"><img src="Assets/Images/512/arrow-down-b.png" id="arrow-down" </a></div>
             </div>
             <div class="row" id="about">
 
