Fix overlay fullscreen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                     <p>Take the journey with me</p>
                     <p></p>
                 </div>
-                <div class="column small-2 small-centered"><a href="#about"><img src="Assets/Images/512/arrow-down-b.png" id="arrow-down" </a></div>
+                <div class="column small-2 small-centered text-center">
+                    <p>Click to scroll down.</p>
+                    <a href="#about"><img src="Assets/Images/512/arrow-down-b.png" id="arrow-down" </a></div>
             </div>
             <div class="row" id="about">
 
