About without bg anime

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Chris Kiilu</title>
         <link href="Assets/Stylesheets/foundation.css" rel="stylesheet">
         <link href="Assets/Stylesheets/main.css" rel="stylesheet">
     </head>
@@ -21,8 +21,12 @@
                         <img src="Assets/Images/512/arrow-down-b.png" id="arrow-down"></a></div>
             </div>
             <div class="row" id="about">
-                <div id="me"></div>
-                <div id="skills"></div>
+                <div id="me" class="column small-12">
+                    <h2>About Me</h2>
+                    <p>I am currently learning to code</p>
+                    <h5>Skills</h5>
+                    <p></p>
+                </div>
             </div>
             <div class="row" id="folio">
 
