Added javascript and animate files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Chris Kiilu</title>
         <link href="Assets/Stylesheets/foundation.css" rel="stylesheet">
+        <link
         <link href="Assets/Stylesheets/main.css" rel="stylesheet">
     </head>
     <body>
@@ -26,6 +27,9 @@
                     <p>I am currently learning to code</p>
                     <h5>Skills</h5>
                     <p></p>
+                    <svg>
+                        <text></text>
+                    </svg>
                 </div>
             </div>
             <div class="row" id="folio">
@@ -34,7 +38,7 @@
             <div class="row" id="contact">
                 <h2>Contact</h2>
                 <p>If you wish to get in touch with me fill n the form below.</p>
-                <form id="contact-form" class="column">
+                <form id="contact-form" class="column" style="padding:2%;">
                     <input type="text" id="name" placeholder="Full Name">
                     <input type="email" id="email" placeholder="username@example.com">
                     <textarea placeholder="Type your message here" style="height:240px;" id="message"></textarea>
