Linked stylesheets and scripts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Chris Kiilu</title>
         <link href="Assets/Stylesheets/foundation.css" rel="stylesheet">
-        <link
+        <link href="Assets/Stylesheets/animate.min.css" rel="stylesheet">
         <link href="Assets/Stylesheets/main.css" rel="stylesheet">
     </head>
     <body>
@@ -52,5 +52,11 @@
            about.style.display="block";
        }
      </script>
+        <script src="Assets/Scripts/foundation.js"></script>
+        <script src="Assets/Scripts/jquery-2.1.1.js"></script>
+        <script src="Assets/Scripts/jquery.lettering.js"></script>
+        <script src="Assets/Scripts/jquery.textillate.js"></script>
+        <script src="Assets/Scripts/main.js"></script>
+        <script src="Assets/Scripts/modernizr.js"></script>
     </body>
 </html>
