--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <div id="content">
             <div class="row" id="home">
                 <div class="column small-12 text-center" id="home-txt">
-                    <h1>Christopher Kiilu Ndeti</h1>
-                    <p>Take the journey with me</p>
-                    <p></p>
+                    <h1 class="tt">Christopher Kiilu Ndeti</h1>
+                    <p class="tt">Take the journey with me</p>
                 </div>
                 <div class="column small-12 small-centered text-center" id="home-img">
                     <p>Click to scroll down.</p>
@@ -26,11 +25,7 @@
                     <h2>About Me</h2>
                     <p>I am currently learning to code</p>
                     <h5>Skills</h5>
-                    <p></p>
-                    <svg>
-                        <text></text>
-                    </svg>
-                </div>
+
             </div>
             <div class="row" id="folio">
 
@@ -54,6 +49,7 @@
      </script>
         <script src="Assets/Scripts/foundation.js"></script>
         <script src="Assets/Scripts/jquery-2.1.1.js"></script>
+        <script src="Assets/Scripts/jquery-2.2.0.min.js"></script>
         <script src="Assets/Scripts/jquery.lettering.js"></script>
         <script src="Assets/Scripts/jquery.textillate.js"></script>
         <script src="Assets/Scripts/main.js"></script>
