Added contact bg, change target for button

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
                     <p class="tt">Take the journey with me</p>
                 </div>
                 <div class="column small-12 small-centered text-center" id="home-img">
-                    <p>Click to scroll down.</p>
+                    <p class="tt">Click to scroll down.</p>
                     <a href="#about"  onclick="toggleAbout()">
                         <img src="Assets/Images/512/arrow-down-b.png" id="arrow-down"></a></div>
             </div>
+            <div id="info">
             <div class="row" id="about">
                 <div id="me" class="column small-12">
                     <h2>About Me</h2>
@@ -32,18 +33,15 @@
             </div>
             <div class="row" id="contact">
                 <h2>Contact</h2>
-                <p>If you wish to get in touch with me fill n the form below.</p>
-                <form id="contact-form" class="column" style="padding:2%;">
-                    <input type="text" id="name" placeholder="Full Name">
-                    <input type="email" id="email" placeholder="username@example.com">
-                    <textarea placeholder="Type your message here" style="height:240px;" id="message"></textarea>
-                    <input type="submit" id="submit" class="column small-4 small-offset-4 large-2 large-offset-5 end">
-                </form>
+                <p>Get in touch with me at:</p>
+                <div class="column "></div>
+
             </div>
         </div>
+                </div>
            <script>
          function toggleAbout(){
-           var about = document.getElementById('about');
+           var about = document.getElementById('info');
            about.style.display="block";
        }
      </script>
