--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
 
-        <div id="content">
+        <div id="content" class=" text-center">
             <div class="row" id="home">
-                <div class="column small-12 text-center" id="home-txt">
+                <div class="column small-12" id="home-txt">
                     <h1 class="tt">Christopher Kiilu Ndeti</h1>
                     <p class="tt">Take the journey with me</p>
                 </div>
@@ -26,15 +26,25 @@
                     <h2>About Me</h2>
                     <p>I am currently learning to code</p>
                     <h5>Skills</h5>
+                    <ul>
+                        <li></li></a>
+
+                    </ul>
 
             </div>
+                <div class="column small-1 float-right" id="scrollbar">
+                    <a href="#home"><img src="Assets/Images/512/home.png"></a>
+                    <a href="#about"><img src="Assets/Images/512/information-circled.png"></a>
+                    <a href="#folio"><img src="Assets/Images/512/ios7-albums.png"></a>
+                    <a href="#contact"><img src="Assets/Images/512/ios7-telephone.png"></a>
+                </div>
+                </div>
             <div class="row" id="folio">
 
             </div>
-            <div class="row" id="contact">
+            <div class="row column small-12" id="contact">
                 <h2>Contact</h2>
                 <p>Get in touch with me at:</p>
-                <div class="column "></div>
 
             </div>
         </div>
