--- a/index.html
+++ b/index.html
@@ -1,66 +1,71 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Chris Kiilu</title>
-        <link href="Assets/Stylesheets/foundation.css" rel="stylesheet">
-        <link href="Assets/Stylesheets/animate.min.css" rel="stylesheet">
-        <link href="Assets/Stylesheets/main.css" rel="stylesheet">
-    </head>
-    <body>
 
-        <div id="content" class=" text-center">
-            <div class="row" id="home">
-                <div class="column small-12" id="home-txt">
-                    <h1 class="tt">Christopher Kiilu Ndeti</h1>
-                    <p class="tt">Take the journey with me</p>
-                </div>
-                <div class="column small-12 small-centered text-center" id="home-img">
-                    <p class="tt">Click to scroll down.</p>
-                    <a href="#about"  onclick="toggleAbout()">
-                        <img src="Assets/Images/512/arrow-down-b.png" id="arrow-down"></a></div>
+<head>
+    <meta charset="utf-8">
+    <title>Chris Kiilu</title>
+    <link href="Assets/Stylesheets/foundation.css" rel="stylesheet">
+    <link href="Assets/Stylesheets/animate.min.css" rel="stylesheet">
+    <link href="Assets/Stylesheets/main.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <div id="content" class=" text-center">
+        <div class="row" id="home">
+            <div class="column small-12" id="home-txt">
+                <h1 class="tt">Christopher Kiilu Ndeti</h1>
+                <p class="tt" data-out-effect="fadeOut">Take the journey with me</p>
+                <p class="boun">Learn</p>
+                <p class="boun">Discover</p>
+                <p class="boun">Imagine</p>
             </div>
-            <div id="info">
+            <div class="column small-12 small-centered text-center" id="home-img">
+                <p class="tt">Click to scroll down.</p>
+                <a href="#about" onclick="toggleAbout()">
+                    <img src="Assets/Images/512/arrow-down-b.png" id="arrow-down"></a>
+            </div>
+        </div>
+        <div id="info">
+
             <div class="row" id="about">
                 <div id="me" class="column small-12">
-                    <h2>About Me</h2>
-                    <p>I am currently learning to code</p>
-                    <h5>Skills</h5>
-                    <ul>
-                        <li></li></a>
+                    <h2 class="bout">About Me</h2>
+                    <p class="bout">I am currently learning to code</p>
+                    <h5 class="bout">Skills</h5>
+                    <ul class="bout">
+                        <li></li>
+                        </a>
 
                     </ul>
 
+                </div>
+
             </div>
-                <div class="column small-1 float-right" id="scrollbar">
-                    <a href="#home"><img src="Assets/Images/512/home.png"></a>
-                    <a href="#about"><img src="Assets/Images/512/information-circled.png"></a>
-                    <a href="#folio"><img src="Assets/Images/512/ios7-albums.png"></a>
-                    <a href="#contact"><img src="Assets/Images/512/ios7-telephone.png"></a>
-                </div>
-                </div>
+
             <div class="row" id="folio">
 
             </div>
             <div class="row column small-12" id="contact">
                 <h2>Contact</h2>
                 <p>Get in touch with me at:</p>
-
-            </div>
-        </div>
+                <div </div>
                 </div>
-           <script>
-         function toggleAbout(){
-           var about = document.getElementById('info');
-           about.style.display="block";
-       }
-     </script>
-        <script src="Assets/Scripts/foundation.js"></script>
-        <script src="Assets/Scripts/jquery-2.1.1.js"></script>
-        <script src="Assets/Scripts/jquery-2.2.0.min.js"></script>
-        <script src="Assets/Scripts/jquery.lettering.js"></script>
-        <script src="Assets/Scripts/jquery.textillate.js"></script>
-        <script src="Assets/Scripts/main.js"></script>
-        <script src="Assets/Scripts/modernizr.js"></script>
-    </body>
+            </div>
+            <script>
+                function toggleAbout() {
+                    var about = document.getElementById('info');
+                    about.style.display = "block";
+                }
+
+            </script>
+            <script src="Assets/Scripts/foundation.js"></script>
+            <script src="Assets/Scripts/jquery-2.1.1.js"></script>
+            <script src="Assets/Scripts/jquery-2.2.0.min.js"></script>
+            <script src="Assets/Scripts/jquery.lettering.js"></script>
+            <script src="Assets/Scripts/jquery.textillate.js"></script>
+            <script src="Assets/Scripts/main.js"></script>
+            <script src="Assets/Scripts/modernizr.js"></script>
+</body>
+
 </html>
