Added folio images

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
                 <p class="tt" data-out-effect="fadeOut">Take the journey with me</p>
                 <p class="boun">Learn</p>
                 <p class="boun">Discover</p>
-                <p class="boun">Imagine</p>
             </div>
             <div class="column small-12 small-centered text-center" id="home-img">
                 <p class="tt">Click to scroll down.</p>
-                <a href="#about" onclick="toggleAbout()">
-                    <img src="Assets/Images/512/arrow-down-b.png" id="arrow-down"></a>
+                <div class="small-up-4">
+                    <a href="#about" onclick="toggleAbout()">
+                        <img src="Assets/Images/512/arrow-down-b.png" id="arrow-down"></a>
+                </div>
             </div>
         </div>
         <div id="info">
@@ -44,6 +45,11 @@
             </div>
 
             <div class="row" id="folio">
+                <h2>Portfolio</h2>
+                <p>Below are the projects I have worked on:</p>
+                <h3>Individual projects</h3>
+                <img src="Assets/">
+                <h3>Team projects</h3>
 
             </div>
             <div class="row column small-12" id="contact">
