--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@
                 <h2>Portfolio</h2>
                 <p>Below are the projects I have worked on:</p>
                 <h3>Individual projects</h3>
-                <img src="Assets/">
-                <h3>Team projects</h3>
-
+                <div class="column small-up-4">
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:25.png">
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:38.png">
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:45.png">
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:50.png">
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:56.png">
+                    <h3>Collaborative projects</h3>
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2012:10:56.png">
+                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2012:11:06.png">
+                </div>
             </div>
             <div class="row column small-12" id="contact">
                 <h2>Contact</h2>
