Added folio links

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 
             <div class="row" id="folio">
                 <h2>Portfolio</h2>
-                <p>Below are the projects I have worked on:</p>
+                <p>Click the images below to view the projects I have worked on.</p>
                 <h3>Individual projects</h3>
                 <div class="column small-up-4">
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:25.png">
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:38.png">
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:45.png">
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:50.png">
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:56.png">
+                    <a href="http://kiiluknut.bitballoon.com/"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:25.png"></a>
+                    <a href="http://thefuri.bitballoon.com"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:38.png"></a>
+                    <a href="http://kiilucv.bitballoon.com"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:45.png"></a>
+                    <a href="http://amkastories.bitballoon.com"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:50.png"></a>
+                    <a href="http://connectdesigns.bitballoon.com"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2011:32:56.png"></a>
                     <h3>Collaborative projects</h3>
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2012:10:56.png">
-                    <img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2012:11:06.png">
+                    <a href="http://jkcafe.bitballoon.com"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2012:10:56.png"></a>
+                    <a href="http://cafefagioli.bitballoon.com"><img src="Assets/Images/sites/Screenshot%20from%202016-01-27%2012:11:06.png"></a>
                 </div>
             </div>
             <div class="row column small-12" id="contact">
