Textillate effects edited

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <div class="row" id="home">
             <div class="column small-12" id="home-txt">
                 <h1 class="tt">Christopher Kiilu Ndeti</h1>
-                <p class="tt" data-out-effect="fadeOut">Take the journey with me</p>
-                <p class="boun">Learn</p>
-                <p class="boun">Discover</p>
+                <p class="tt">Take the journey with me</p>
+                <ul class="bout">
+                    <li class="bout">Learn</li>
+                    <li class="bout">Discover</li>
+                    <li class="bout">Let us Explore</li>
+                </ul>
             </div>
             <div class="column small-12 small-centered text-center" id="home-img">
                 <p class="tt">Click to scroll down.</p>
@@ -31,13 +34,20 @@
 
             <div class="row" id="about">
                 <div id="me" class="column small-12">
-                    <h2 class="bout">About Me</h2>
-                    <p class="bout">I am currently learning to code</p>
-                    <h5 class="bout">Skills</h5>
-                    <ul class="bout">
-                        <li></li>
-                        </a>
-
+                    <h2>About Me</h2>
+                    <p class="boun">I love coding.</p>
+                    <h3 class="boun">Skills</h3>
+                    <ul>
+                        <li class="boun">HTML</li>
+                        <li class="boun">CSS</li>
+                        <li class="boun">Javascript</li>
+                    </ul>
+                    <h3 class="boun">Hobbies</h3>
+                    <ul>
+                        <li class="boun">Table tennis</li>
+                        <li class="boun">Chess</li>
+                        <li class="boun">Hiking</li>
+                        <li class="boun">Listening to jazz, classical and house music.</li>
                     </ul>
 
                 </div>
@@ -62,23 +72,27 @@
             <div class="row column small-12" id="contact">
                 <h2>Contact</h2>
                 <p>Get in touch with me at:</p>
-                <div </div>
-                </div>
-            </div>
-            <script>
-                function toggleAbout() {
-                    var about = document.getElementById('info');
-                    about.style.display = "block";
-                }
+                <div id="social" class="row">
 
-            </script>
-            <script src="Assets/Scripts/foundation.js"></script>
-            <script src="Assets/Scripts/jquery-2.1.1.js"></script>
-            <script src="Assets/Scripts/jquery-2.2.0.min.js"></script>
-            <script src="Assets/Scripts/jquery.lettering.js"></script>
-            <script src="Assets/Scripts/jquery.textillate.js"></script>
-            <script src="Assets/Scripts/main.js"></script>
-            <script src="Assets/Scripts/modernizr.js"></script>
+                    <span>Facebook</span><img src="Assets/Images/512/social-facebook.png">
+                </div>
+
+            </div>
+        </div>
+        <script>
+            function toggleAbout() {
+                var about = document.getElementById('info');
+                about.style.display = "block";
+            }
+
+        </script>
+        <script src="Assets/Scripts/foundation.js"></script>
+        <script src="Assets/Scripts/jquery-2.1.1.js"></script>
+        <script src="Assets/Scripts/jquery-2.2.0.min.js"></script>
+        <script src="Assets/Scripts/jquery.lettering.js"></script>
+        <script src="Assets/Scripts/jquery.textillate.js"></script>
+        <script src="Assets/Scripts/main.js"></script>
+        <script src="Assets/Scripts/modernizr.js"></script>
 </body>
 
 </html>
