Added contact info

--- a/index.html
+++ b/index.html
@@ -70,11 +70,16 @@
                 </div>
             </div>
             <div class="row column small-12" id="contact">
-                <h2>Contact</h2>
-                <p>Get in touch with me at:</p>
-                <div id="social" class="row">
-
-                    <span>Facebook</span><img src="Assets/Images/512/social-facebook.png">
+                <div id="contact-bg">
+                    <h2>Contact</h2>
+                    <p>Get in touch with me at :</p>
+                    <div id="social" class="row">
+                        <p><img src="Assets/Images/512/ios7-telephone.png">Phone Number: +254 xxxx xxx xxx</p>
+                        <p><img src="Assets/Images/512/ios7-email.png">Email address: cndeti@gmail.com</p>
+                        <p><img src="Assets/Images/512/social-facebook.png"><span>Facebook</span></p>
+                        <p><img src="Assets/Images/512/social-twitter.png"><span>Twitter</span></p>
+                        <p><img src="Assets/Images/512/social-github.png"><span>Github</span></p>
+                    </div>
                 </div>
 
             </div>
