--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
                     <h2>Contact</h2>
                     <p>Get in touch with me at :</p>
                     <div id="social" class="row">
-                        <p><img src="Assets/Images/512/ios7-telephone.png">Phone Number: +254 xxxx xxx xxx</p>
-                        <p><img src="Assets/Images/512/ios7-email.png">Email address: cndeti@gmail.com</p>
-                        <p><img src="Assets/Images/512/social-facebook.png"><span>Facebook</span></p>
-                        <p><img src="Assets/Images/512/social-twitter.png"><span>Twitter</span></p>
-                        <p><img src="Assets/Images/512/social-github.png"><span>Github</span></p>
+                        <div class="column small-8 large-6">
+                            <p><img src="Assets/Images/512/ios7-telephone.png">Phone Number: +254 xxxx xxx xxx</p>
+                            <p><img src="Assets/Images/512/ios7-email.png">Email address: cndeti@gmail.com</p>
+                        </div>
+                        <div class="column small-4 large-6 end">
+                            <p><img src="Assets/Images/512/social-facebook.png"><span>Facebook</span></p>
+                            <p><img src="Assets/Images/512/social-twitter.png"><span>Twitter</span></p>
+                            <p><img src="Assets/Images/512/social-github.png"><span>Github</span></p>
+                        </div>
                     </div>
                 </div>
 
