--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row" id="about">
                 <div id="me" class="column small-12">
                     <h2>About Me</h2>
-                    <p class="boun">I love coding.</p>
+                    <p class="boun">I have an interest in software development to create solutions for problems facing the community and I am currently living in Nairobi.</p>
                     <h3 class="boun">Skills</h3>
                     <ul>
                         <li class="boun">HTML</li>
