--- a/index.html
+++ b/index.html
@@ -33,22 +33,26 @@
         <div id="info">
 
             <div class="row" id="about">
-                <div id="me" class="column small-12">
+                <div id="me" class="don column small-12">
                     <h2>About Me</h2>
                     <p class="boun">I have an interest in software development to create solutions for problems facing the community and I am currently living in Nairobi.</p>
-                    <h3 class="boun">Skills</h3>
-                    <ul>
-                        <li class="boun">HTML</li>
-                        <li class="boun">CSS</li>
-                        <li class="boun">Javascript</li>
-                    </ul>
-                    <h3 class="boun">Hobbies</h3>
-                    <ul>
-                        <li class="boun">Table tennis</li>
-                        <li class="boun">Chess</li>
-                        <li class="boun">Hiking</li>
-                        <li class="boun">Listening to jazz, classical and house music.</li>
-                    </ul>
+                    <div class="don column small-12 large-6">
+                        <h3 class="boun">Skills</h3>
+                        <ul>
+                            <li class="boun">HTML</li>
+                            <li class="boun">CSS</li>
+                            <li class="boun">Javascript</li>
+                        </ul>
+                    </div>
+                    <div class="don column small-12 large-6">
+                        <h3 class="boun">Hobbies</h3>
+                        <ul>
+                            <li class="boun">Table tennis</li>
+                            <li class="boun">Chess</li>
+                            <li class="boun">Hiking</li>
+                            <li class="boun">Listening to jazz, classical and house music.</li>
+                        </ul>
+                    </div>
 
                 </div>
 
